--- a/manifest.json
+++ b/manifest.json
@@ -3,6 +3,9 @@
     "short_name": "__MSG_ext_name__",
     "version": "1.0",
     "description": "__MSG_ext_desc__",
+    "permissions": [
+      "activeTab"
+    ],
     "background": {
       "scripts": ["js/rank-listener.js","background.js"],
       "persistent": false
